--- a/backend_pipeline.yaml
+++ b/backend_pipeline.yaml
@@ -6,7 +6,7 @@ Resources:
   SearchPhotos:
     Type: "AWS::Serverless::Function"
     Properties:
-      FunctionName: search-photos-pipeline
+      FunctionName: search-photos
       Handler: lambda_function.lambda_handler
       Runtime: python3.6
       CodeUri: ./search-photos-dir
@@ -21,7 +21,7 @@ Resources:
   IndexPhotos:
     Type: "AWS::Serverless::Function"
     Properties:
-      FunctionName: index-photos-pipeline
+      FunctionName: index-photos
       Handler: lambda_function.lambda_handler
       Runtime: python3.6
       CodeUri: ./index-photos-dir
