--- a/backend_pipeline.yaml
+++ b/backend_pipeline.yaml
@@ -6,7 +6,7 @@ Resources:
   SearchPhotos:
     Type: "AWS::Serverless::Function"
     Properties:
-      FunctionName: search-photos
+      FunctionName: search-photos-pipeline
       Handler: lambda_function.lambda_handler
       Runtime: python3.6
       CodeUri: ./search-photos-dir
@@ -17,11 +17,18 @@ Resources:
       Environment:
         Variables:
           REGION: us-east-1
+          
+  SearchPhotosPipelineLogGroup:
+    Type: "AWS::Logs::LogGroup"
+    LogGroupName: "search-photos-pipeline"
+    DependsOn: SearchPhotos
+    Properties:
+      RetentionInDays: 7
 
   IndexPhotos:
     Type: "AWS::Serverless::Function"
     Properties:
-      FunctionName: index-photos
+      FunctionName: index-photos-pipeline
       Handler: lambda_function.lambda_handler
       Runtime: python3.6
       CodeUri: ./index-photos-dir
@@ -32,3 +39,10 @@ Resources:
       Environment:
         Variables:
           REGION: us-east-1
+  
+   IndexPhotosPipelineLogGroup:
+    Type: "AWS::Logs::LogGroup"
+    LogGroupName: "index-photos-pipeline"
+    DependsOn: IndexPhotos
+    Properties:
+      RetentionInDays: 7
